I added the the education section and the certification section to the second column. Also, I deleted the arrows of the tiles and changed the color

--- a/style.css
+++ b/style.css
@@ -21,3 +21,14 @@ ul {
   color: var(--primary-color);
   text-transform: uppercase;
 }
+h6 {
+  font-weight: 800;
+}
+.certificates {
+  text-decoration: none;
+  cursor: pointer;
+  color: #000;
+}
+.certificates:hover {
+  text-decoration: underline;
+}
