--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ ul {
 .my-picture {
   display: block;
   margin: 0 auto;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
 }
 .name {
   color: var(--primary-color);
